--- a/pom.xml
+++ b/pom.xml
@@ -25,12 +25,17 @@
             <artifactId>joda-time</artifactId>
             <version>2.8.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.17</version>
+        </dependency>
     </dependencies>
-
-
     <modules>
         <module>baiwen-api</module>
         <module>baiwen-business</module>
         <module>baiwen-common</module>
     </modules>
+
+
 </project>
