--- a/baiwen-api/src/main/resources/application-dev.properties
+++ b/baiwen-api/src/main/resources/application-dev.properties
@@ -1,9 +1,9 @@
 mybatis.mapper-locations=classpath*:/config/mapper/*Mapper.xml
 server.port=2070
 
-spring.datasource.url=jdbc:mysql://119.23.10.66:3306/dpc?useUnicode=true&amp;characterEncoding=UTF-8&useSSL=false
-spring.datasource.username=tianbiao
-spring.datasource.password=T68iegprs
+spring.datasource.url=jdbc:mysql://47.103.81.220:3306/baiwen?useUnicode=true&amp;characterEncoding=UTF-8&useSSL=false
+spring.datasource.username=admin
+spring.datasource.password=Baiwen@123.com
 logging.level.org.springframework.web=INFO
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
