--- a/baiwen-api/pom.xml
+++ b/baiwen-api/pom.xml
@@ -14,12 +14,22 @@
 		<version>1.0</version>
 		<relativePath/>
 	</parent>
-		<dependencies>
-			<dependency>
-				<groupId>com.baiwen</groupId>
-				<artifactId>baiwen-service</artifactId>
-				<version>0.0.1-SNAPSHOT</version>
-			</dependency>
-		</dependencies>
+	<dependencies>
+		<dependency>
+			<groupId>com.baiwen</groupId>
+			<artifactId>baiwen-business</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.2.2</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.2.2</version>
+		</dependency>
+	</dependencies>
 
 </project>
