--- a/baiwen-api/src/main/resources/application-dev.properties
+++ b/baiwen-api/src/main/resources/application-dev.properties
@@ -1,5 +1,12 @@
 mybatis.mapper-locations=classpath*:/config/mapper/*Mapper.xml
-server.port=2060
+server.port=8080
+server.servlet.context-path=/api
+spring.jmx.default-domain=api
+
+pagehelper.helperDialect=mysql
+pagehelper.reasonable=true
+pagehelper.supportMethodsArguments=true
+pagehelper.params=count=countSql
 
 spring.datasource.url=jdbc:mysql://47.103.81.220:3306/baiwen?useUnicode=true&amp;characterEncoding=UTF-8&useSSL=false
 spring.datasource.username=admin
