--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,11 @@
             <artifactId>poi</artifactId>
             <version>3.17</version>
         </dependency>
-
+        <dependency>
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
+            <version>3.2.2</version>
+        </dependency>
     </dependencies>
     <modules>
         <module>baiwen-api</module>
